# FontRenderer

./: .gitignore  Application.cpp  Application.h  BuildSystemInput.h.in  CMakeLists.txt  CMakeSettings.json  Console.cpp  Console.h  EventSystem.cpp  EventSystem.h  File.cpp  File.h  Font.cpp  Font.h  Keyboard.cpp  Keyboard.h  KeyboardInfo.cpp  KeyboardInfo.h  README.md  WindowsMessageMap.cpp  WindowsMessageMap.h  main.cpp  win32.cpp  win32.h
Console/: CMakeLists.txt  ChildConsole.cpp  ChildConsole.h  ChildConsoleProcess.cpp  ConsoleCommon.cpp  ConsoleCommon.h  Message.h  ParentConsole.cpp  ParentConsole.h
Delaunay/: CMakeLists.txt  Delaunay.cpp  Delaunay.h  DelaunayUtil.cpp  DelaunayUtil.h
Graphics/: CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.h  gfxUtil.h
Mesh/: CMakeLists.txt  Edge.cpp  Edge.h  Mesh.cpp  Mesh.h  MeshUtil.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h
Shaders/: compile.bat  font.frag  font.vert  fontVert.spv  shader.vert
